Rename 'register' to 'registration'
