# toolset-api/toolset.openapi.yaml
@@ -44,13 +44,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
               
-  /register:
+  /registration:
     post:
       summary: User registration
       description: User registration
       tags:
         - anonymous
-      operationId: register
+      operationId: registration
       requestBody:
         content:
           application/json:
